third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/no_pin_on_phantompinned.stderr
error: The field `pin1` of type `PhantomPinned` only has an effect if it has the `#[pin]` attribute
 --> tests/ui/compile-fail/pin_data/no_pin_on_phantompinned.rs:6:5
  |
6 |     pin1: PhantomPinned,
  |     ^^^^^^^^^^^^^^^^^^^

error: The field `pin2` of type `PhantomPinned` only has an effect if it has the `#[pin]` attribute
 --> tests/ui/compile-fail/pin_data/no_pin_on_phantompinned.rs:7:5
  |
7 |     pin2: marker::PhantomPinned,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The field `pin3` of type `PhantomPinned` only has an effect if it has the `#[pin]` attribute
 --> tests/ui/compile-fail/pin_data/no_pin_on_phantompinned.rs:8:5
  |
8 |     pin3: core::marker::PhantomPinned,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The field `pin4` of type `PhantomPinned` only has an effect if it has the `#[pin]` attribute
 --> tests/ui/compile-fail/pin_data/no_pin_on_phantompinned.rs:9:5
  |
9 |     pin4: ::core::marker::PhantomPinned,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
